fix the overflow issue in products modals, and supplier modal

--- a/public/css/admin/navbar.css
+++ b/public/css/admin/navbar.css
@@ -38,6 +38,17 @@ button:hover{
 .success{
     animation: fromrighttoleft 0.5s ease-in-out;
 }
+.modal{
+    animation: fadeIn 0.3s ease-in-out;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 @keyframes fromrighttoleft {
     from {
         transform: translateX(100%);
